--- a/public/Mission_AI_Possible_Submission.html
+++ b/public/Mission_AI_Possible_Submission.html
@@ -343,7 +343,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🚀 Mission AI Possible</h1>
+            <h1>Mission AI Possible</h1>
             <div class="subtitle">AI based ISO Certification Search Platform</div>
             <div class="team-info">
                 <div><strong>Project Name:</strong> ISO Certification Information Search System (v1.0)</div>
@@ -848,7 +848,7 @@
                 </h2>
                 
                 <div class="cta-box">
-                    <h3>🚀 지금 플랫폼을 체험해보세요</h3>
+                    <h3>지금 플랫폼을 체험해보세요</h3>
                     <p style="margin-bottom: 25px; font-size: 1.1em;">
                         실제 배포된 시스템에서 GPT 기반 뉴스 분석, 다중 소스 스크래핑, 하이브리드 검색을 체험하실 수 있습니다.
                     </p>
