--- a/public/Mission_AI_Possible_Submission_EN.html
+++ b/public/Mission_AI_Possible_Submission_EN.html
@@ -589,7 +589,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🚀 Mission AI Possible</h1>
+            <h1>Mission AI Possible</h1>
             <div class="subtitle">AI based ISO Certification Search Platform</div>
             <div class="team-info">
                 <div><strong>Project Name:</strong> ISO Certification Information Search System (v0.1)</div>
@@ -1191,7 +1191,7 @@
                 </h2>
                 
                 <div class="cta-box">
-                    <h3>🚀 Experience the Platform Now</h3>
+                    <h3>Experience the Platform Now</h3>
                     <p style="margin-bottom: 30px; font-size: 1.2em; position: relative; z-index: 1;">
                         Try the live production system with full AI-powered search capabilities including GPT news analysis, 
                         multi-source scraping, and hybrid search architecture.
