--- a/public/Mission_AI_Possible_Submission_EN.html
+++ b/public/Mission_AI_Possible_Submission_EN.html
@@ -593,7 +593,7 @@
             <div class="subtitle">AI based ISO Certification Search Platform</div>
             <div class="team-info">
                 <div><strong>Project Name:</strong> ISO Certification Information Search System (v0.1)</div>
-                <div><strong>Team Name:</strong> Developer : Dal Kim</div>
+                <div><strong>Developer:</strong> Dal Kim</div>
                 <div style="margin-top: 15px;">
                     <span class="badge">AI Automation</span>
                     <span class="badge">Natural Language Processing</span>
