--- a/public/Mission_AI_Possible_Submission_EN.html
+++ b/public/Mission_AI_Possible_Submission_EN.html
@@ -1339,7 +1339,7 @@
                 </p>
             </div>
 
-            <p style="margin-top: 40px; font-size: 1em; opacity: 0.8;">© 2025 ISO Certification Search System - Powered by AI</p>
+            <p style="margin-top: 40px; font-size: 1em; opacity: 0.8;">© 2025 ISO Certification Search System - All rights reserved by Dal Kim</p>
         </div>
     </div>
 
